faire les images et les users dans settings
https://wsvincent.com/django-image-uploads/
le tuto a suivre
ou abdurahman

--- a/djangoproject/gestion_stock/templates/article.html
+++ b/djangoproject/gestion_stock/templates/article.html
@@ -93,6 +93,8 @@
   $(document).ready(function () {
     $('#dtBasicExample').DataTable();
     $('.dataTables_length').addClass('bs-select');
+
+  //<span class="sr-only">(current)</span>
   });
 
   $("#create-row").click(function() {
@@ -131,9 +133,6 @@
         alert("fail");
       }
     });
-
-
-
   });
 
 </script>
