--- a/djangoproject/gestion_stock/templates/index.html
+++ b/djangoproject/gestion_stock/templates/index.html
@@ -2,20 +2,20 @@
 
 {% block content %}
 
-<html>
+<body>
 <div class="container">
   <br>
 </div>
 
 <script>
-  if ('{{ activate }}')
-    console.log("{{ activate }}");
+  $('#accueil').find('div').eq(0).css({'background-color': 'DodgerBlue',});
+  $('#accueil').before(this).find('hr').css({'background-color': 'DodgerBlue',});
 </script>
 
 <footer class="page-footer font-small blue bottom fixed-bottom">
   <div class="footer-copyright text-center py-3">© 2019 Copyright
   </div>
 </footer>
-</html>
+</body>
 
 {% endblock %}
