--- a/djangoproject/gestion_stock/templates/index.html
+++ b/djangoproject/gestion_stock/templates/index.html
@@ -10,6 +10,11 @@
 <script>
   $('#accueil').find('div').eq(0).css({'background-color': 'DodgerBlue',});
   $('#accueil').before(this).find('hr').css({'background-color': 'DodgerBlue',});
+  setTimeout(function() {
+    $("#openmenu").trigger("click");
+    console.log("menu oppening");
+  },1000);
+
 </script>
 
 <footer class="page-footer font-small blue bottom fixed-bottom">
