--- a/djangoproject/gestion_stock/templates/unitemanutentionentree.html
+++ b/djangoproject/gestion_stock/templates/unitemanutentionentree.html
@@ -42,7 +42,7 @@
     <div class="row">
         <div class="col">
             <div class="border shadow-lg p-3 mb-5 bg-white rounded">
-                <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                <table id="dtBasicExample" class="table table-striped table-bordered table-sm table-responsive" cellspacing="0" width="100%">
                     <thead>
                     <tr>
                         <th scope="col" class="th-sm"> modify </th>
